--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Dave and Steph
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://dkrees.github.io/Dave-and-steph/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://www.daveandsteph.co.uk/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 
